renamed bower.json files for new assignment

--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "assignment1-miniportfolio",
+  "name": "assignment2-contactupdate",
   "authors": [
     "JCannon1 <jessecannon1@hotmail.com>"
   ],
-  "description": "mini portfolio",
+  "description": "contact update",
   "main": "",
   "keywords": [
     "JavaScript"
